# fv-skills-command

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: architecture.md  developer-guide.md  getting-started.md  theming-guide.md
examples/: sample-moc.md  sample-skill.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autogit.rs  file_watch.rs  fs_scan.rs  git_reader.rs  graph_builder.rs  lib.rs  main.rs  theme_config.rs
src/components/: ChangeStreamSidebar.svelte  DetailPanel.svelte  DiffViewer.svelte  FileTree.svelte  GraphView.svelte  MarkdownView.svelte  SettingsPanel.svelte  SettingsTab.svelte  Sidebar.svelte
src/lib/: desktop-health.js  store.js
test/: health.test.js  integration.test.js
test/fixtures/: circular-a.md  circular-b.md  malformed-yaml.md  no-frontmatter.md  valid-frontmatter.md
themes/: example-client.json
