[package]
name = "fv-skills-viewer"
version = "0.1.0"
edition = "2021"
description = "ForgeVista Skills Graph Viewer"
license = "MIT"

[lib]
name = "fv_skills_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
notify-debouncer-full = "0.7"
